<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kang.receiverv1.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="81dp"
        android:text="@string/Sensor_button"
        android:layout_marginLeft="46dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="46dp"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="113dp"
        android:layout_height="75dp"
        android:text="@string/Motor_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.475" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_bt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="192.168.40.42"
        android:text="192.168.40.42"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="1423"
        android:text="1423"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_ip"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_port"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/textView9"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.235" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="261dp"
        android:layout_height="66dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tx_receive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>
